<resources>
    <string name="app_name">Thorium</string>
    <!-- Public token-->
    <string name="mapbox_access_token">pk.eyJ1IjoiZGFsaXN5cm9uIiwiYSI6ImNrcTJiNHQ4NzBteGsyb3A4c2IzaTM2b3kifQ.66pbzBSG4XxugT9jLMeiew</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_count_place_holder">Log Count: %1$d</string>
    <string name="start_location_place_holder">Start Location: %1$s</string>
    <string name="stop_location_place_holder">Stop Location: %1$s</string>
    <string name="title_settings">Settings</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="date">Log Date: %1$s</string>
    <string name="mcc">MCC: %1$s</string>
    <string name="mnc">MNC: %1$s</string>
    <string name="code">Code: %1$s</string>
    <string name="strength">Strength: %1$s</string>
    <string name="registered">Registered: %1$s</string>
    <string name="lac">LAC: %1$s</string>
    <string name="tac">TAC: %1$s</string>
    <string name="cell_4g">4G Cell</string>
    <string name="cell_3g">3G Cell</string>
    <string name="cell_2g">2G Cell</string>
    <string name="gen4_code_prefix">PCI</string>
    <string name="gen3_code_prefix">PSC</string>
    <string name="gen2_code_prefix">BSIC</string>
    <string name="prefix_location4">TAC</string>
    <string name="prefix_location3">LAC</string>
    <string name="prefix_location2">LAC</string>
    <string name="locationcode">LocationCode: %1$s</string>
    <string name="downstream_throughput">Downstream Throughput: %1$s KBps</string>
    <string name="upstream_throughput">Downstream Throughput: %1$s KBps</string>
    <string name="dns_resolve_time">DNS Resolve Time: %1$s ms</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auto_log_timer">Auto Log Timer</string>

</resources>